Bug #388532 --> nsMoarkFactoryFactory leaks the global mork mdb factory. Change it to a service, and use a com ptr to keep track of the mdb factory.

sr=bienvenu
r=standard8
r=sspitzer for toolkit changes